tests/ui/coherence/impl[t]-foreign-for-foreign[t].stderr
error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> $DIR/impl[t]-foreign-for-foreign[t].rs:11:1
   |
LL | impl Remote for Rc<Local> {
   | ^^^^^^^^^^^^^^^^---------
   |                 |
   |                 `Rc` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> $DIR/impl[t]-foreign-for-foreign[t].rs:16:1
   |
LL | impl<T> Remote for Arc<T> {
   | ^^^^^^^^^^^^^^^^^^^------
   |                    |
   |                    `Arc` is not defined in the current crate
   |
   = note: impl doesn't have any local type before any uncovered type parameters
   = note: for more information see https://doc.rust-lang.org/reference/items/implementations.html#orphan-rules
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
